@@ -1,3 +1,8 @@
+2006-01-04  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@gmail.com>
+
+	* bforce/daemon_call.c (daemon_call_branch): if phone ==
+	00-00-000000, we call via ip
+
 2005-10-24  Evgeniy Kozhuhovskiy  <ugenk@mgts.by>
 
 	* bforce/sess_call.c (call_system): added possibility to run
